# Git-Temp-Files

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  clang_format.sh  cmake_install.cmake  cppLintCheck.py  format_check.sh  tidy_check.sh
.github/workflows/: CI.yml
client/: CMakeLists.txt
libs/: CMakeLists.txt
libs/examplelib/: CMakeLists.txt
libs/examplelib/include/: project.hpp
libs/examplelib/src/: project.cpp
prj/include/: big_file.hpp  connection.hpp  connection_manager.hpp  database.hpp  database_manager.hpp  header.hpp  json.hpp  mime_types.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp
prj/src/: big_file.cpp  connection.cpp  connection_manager.cpp  database.cpp  database_manager.cpp  main.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp  sync_client.cpp
project/include/: matrix.h  matrix_struct.h
project/src/: main.c  matrix.c
project/tests/include/: utils.h
project/tests/src/: test_element_setting.c  test_matrix_adjugate.c  test_matrix_arithmetic.c  test_matrix_creating.c  test_matrix_determinant.c  test_matrix_inverse.c  test_matrix_transponse.c  test_scalar_mul.c  utils.c
server/: CMakeLists.txt
server/src/: server.cpp
tests/: CMakeLists.txt
tests/testExampleLib/: tests.cpp
